# JPE-Sims4

./: .gitignore  ADVANCED_FEATURES_AND_DISTRIBUTION.md  AGENTS.md  ANIMATION_PACK_SUMMARY.md  API_REFERENCE.md  ARCHITECTURE.md  BOOT_CHECKLIST_BRANDING.md  BOOT_CHECKLIST_BRANDING_IMPLEMENTATION.md  BOOT_CHECKLIST_GUIDE.md  BOOT_CHECKLIST_INTEGRATION.md  BOOT_CHECKLIST_SUMMARY.md  CHANGELOG.md  COLOR_ENHANCEMENT_SUMMARY.md  COMPLETE_UI_UX_IMPLEMENTATION_SUMMARY.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_UI_UX_ENHANCEMENT_ALL_PHASES.md  COMPREHENSIVE_UI_UX_ENHANCEMENT_COMPLETION_REPORT.md  COMPREHENSIVE_UI_UX_ENHANCEMENT_PROJECT_COMPLETE.md  COMPREHENSIVE_UI_UX_ENHANCEMENT_SUMMARY.md  CONTRIBUTING.md  CRITICAL_UI_UX_ENHANCEMENTS_SUMMARY.md  DEBUGGING_REPORT.md  DOCUMENTATION.md  FEATURE_DELIVERY_SUMMARY.md  FINAL_DEBUGGING_SUMMARY.md  FINAL_DOCUMENTATION_SUMMARY.md  FINAL_INTEGRATION_TEST.py  FINAL_PHASE_VERIFICATION.py  FINAL_PROJECT_SUMMARY.md  FINAL_UI_UX_ENHANCEMENT_COMPLETE_SUMMARY.md  FINAL_UI_UX_ENHANCEMENT_SUMMARY.md  GITHUB_DEPLOYMENT_GUIDE.md  GITHUB_DOCUMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_GUIDE.md  JPE_ADVANCED_PATTERNS.md  JPE_API_REFERENCE.md  JPE_MASTER_BIBLE.md  JPE_QUICK_START.md  (+48 more)
.claude/: CLAUDE.md  settings.local.json
ai/: ai_assistant.py  ai_error_detection.py  intelligent_completion.py
asset_generator/: base_renderer.py  batch_generator.py  button_generator.py  checkbox_radio_generator.py  cli.py  icon_generator.py  preview_generator.py  progress_bar_generator.py  slider_generator.py  svg_icon_processor.py  svg_renderer.py  tab_bar_generator.py  text_input_generator.py
branding/: icons.py
cloud/: __init__.py  api.py  sync_manager.py
collaboration/: system.py  ui_components.py
config/: config_manager.py
design_system/: design_tokens.json  font_manager.py  token_exporter.py  token_manager.py
diagnostics/: comprehensive.py  error_system.py  errors.py  logging.py  reports.py  sentinel.py
engine/: automated_fixes.py  engine.py  enhanced_validation.py  ir.py  predictive_coding.py  sims4_file_support.py
fonts/: IMPLEMENTATION_SUMMARY.md  LICENSE_COMPLIANCE.md  README.md  __init__.py  bundled_font_installer.py  example_usage.py  font_config.py  font_distribution.py  font_installer.py  font_integration.py  font_manager.py  font_preview.py  font_settings.py  test_font_system.py  visual_font_preview.py  visual_font_selector.py
generated_assets/: asset_preview.html  cli_asset_preview.html  jpe_design_tokens.css  jpe_design_tokens.js
ios_app/: OVERVIEW.md  Package.swift  README.md
mobile/: components.py
mobile_app/: App.tsx  BUILD_AND_DEPLOYMENT_GUIDE.md  MICROSOFT_APP_CENTER_SETUP.md  OVERVIEW.md  README.md  appcenter-pre-build.sh  babel.config.js  index.js  package.json  (+2 more)
(+144 files in other folders)
