[project]
name = "jpe-sims4"
version = "0.1.0"
description = "Core engine and tooling for JPE Sims 4 mod translation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.25.0",
    "toml>=0.10.0",
    "cryptography>=3.4.0",
    "psutil>=5.8.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Games/Entertainment",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "toml>=0.10.0",
]
cloud = [
    "requests>=2.25.0",
]

[project.scripts]
jpe-sims4 = "cli:main"
jpe-studio = "studio:main"

[project.urls]
Homepage = "https://github.com/tuwana/jpe-sims4"
"Bug Reports" = "https://github.com/tuwana/jpe-sims4/issues"
"Source" = "https://github.com/tuwana/jpe-sims4"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
